2015-03-02  Daniel Colascione  <dancol@dancol.org>

	* vc/vc.el (vc-responsible-backend): Add autoload cooking for
	`vc-responsible-backend'.

2015-03-01  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hooks.el (vc-state, vc-working-revision):
	Use `vc-responsible-backend' in order to support unregistered files.

	* vc/vc-rcs.el (vc-rcs-unregister): Support unregistered files.

	* vc/vc-rcs.el (vc-rcs-fetch-master-state):
	* vc/vc-sccs.el (vc-sccs-working-revision): Handle undefined
	master name.

	* vc/vc-src.el (vc-src-working-revision): Do not return an empty string.

2015-03-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-insert): Remove soft hyphens.
	(shr-insert): Also remove soft hypens from non-folded text.

2015-02-28  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailmm.el (rmail-mime-insert-html): Decode HTML payload
	when the charset is only given by the HTML <head>, and allow to
	specify the encoding with "C-x RET c".

2015-02-27  Mark Laws  <mdl@60hz.org>

	Support daemon mode on MS-Windows (bug#19688)
	* server.el (server-process-filter): Force GUI frames on
	MS-Windows in daemon mode, even if a TTY frame was requested.

	* frameset.el (frameset-keep-original-display-p): Don't assume
	windows-nt cannot be in daemon mode.

	* frame.el (window-system-for-display): Don't assume windows-nt
	cannot be in daemon mode.

2015-02-26  Ivan Shmakov  <ivan@siamics.net>

	* faces.el (face-list-p): Split from face-at-point.
	(face-at-point): Use it.
	* facemenu.el (facemenu-add-face): Likewise.  (Bug#19912)

2015-02-26  Oscar Fuentes  <ofv@wanadoo.es>

	* vc/vc.el (vc-annotate-switches): New defcustom.
	* vc/vc-bzr.el (vc-bzr-annotate-switches): New defcustom.
	(vc-bzr-annotate-command): Use vc-switches.
	* vc/vc-cvs.el (vc-cvs-annotate-switches): New defcustom.
	(vc-cvs-annotate-command): Use vc-switches.
	* vc/vc-git.el (vc-git-annotate-switches): New defcustom.
	(vc-git-annotate-command): Use vc-switches.